--- a/ems/package.json
+++ b/ems/package.json
@@ -7,8 +7,11 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "csurf": "^1.10.0",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "helmet": "^3.21.1",
     "mongoose": "^5.7.1",
     "morgan": "^1.9.1"
   }
